--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,39 @@
 [build-system]
-# These are the assumed default build requirements from pip:
-# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
-requires = ["setuptools>=43.0.0", "wheel"]
+# setuptools version required for project configured entirely with pyproject.toml
+requires = ["setuptools>=61.0.0", "setuptools-scm"]
 build-backend = "setuptools.build_meta"
+
+[project]
+name="scityping"
+authors = [
+    {name = "Alexandre René", email = "alex.c.rene@gmail.com"},
+]
+description = "Serializable data types for science applications"
+readme = "README.md"
+requires-python = ">=3.8"
+keywords = ["serialization", "scientific computing", "reproducibility"]
+license = {text = "MPL 2.0"}
+classifiers = [
+    "Development Status :: 4 - Beta",
+    "Intended Audience :: Science/Research",
+    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3 :: Only",
+    "Programming Language :: Python :: 3.8",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+    "Topic :: Scientific/Engineering",
+    "Topic :: Scientific/Engineering :: Artificial Intelligence"
+]
+dependencies = [
+    "pydantic"
+]
+dynamic = ["version"]
+
+[project.optional-dependencies]
+docs = ["sphinx", "myst-parser"]
+test = ["coverage", "pytest",
+        "numpy", "scipy", "blosc", "torch", "pint", "quantities"]
+
+[tool.setuptools_scm]
+write_to = "scityping/_version.py"
