--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,7 +31,7 @@ dependencies = [
 dynamic = ["version"]
 
 [project.optional-dependencies]
-docs = ["sphinx", "myst-parser"]
+docs = ["sphinx", "myst-parser", "sphinx-book-theme"]
 test = ["coverage", "pytest",
         "numpy", "scipy", "blosc", "torch", "pint", "quantities"]
 
