--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,10 +23,12 @@ classifiers = [
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Topic :: Scientific/Engineering",
-    "Topic :: Scientific/Engineering :: Artificial Intelligence"
+    "Topic :: Scientific/Engineering :: Artificial Intelligence",
+    "Topic :: Typed"
 ]
 dependencies = [
-    "pydantic"
+    "pydantic",
+    "valconfig"
 ]
 dynamic = ["version"]
 
