Restrict to Pydantic<2 in dependencies
Pydantic v2 brings many changes to serialization/deserialization,
providing much finer control over serialization.
However the method hooks for this have completely changed, so we would
need to do a substantial rewrite to support it.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,7 @@ classifiers = [
     "Topic :: Typed"
 ]
 dependencies = [
-    "pydantic",
+    "pydantic<2",
     "valconfig"
 ]
 dynamic = ["version"]
