[pyproject.toml] Fix classifier "Typing :: Typed"

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,7 @@ classifiers = [
     "Programming Language :: Python :: 3.10",
     "Topic :: Scientific/Engineering",
     "Topic :: Scientific/Engineering :: Artificial Intelligence",
-    "Topic :: Typed"
+    "Typing :: Typed"
 ]
 dependencies = [
     "pydantic<2",
