--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,7 +38,8 @@ docs = ["sphinx", "myst-parser", "sphinx-book-theme", "sphinxcontrib-mermaid",
         "numpy", "scipy", "torch", "pint", "quantities"]
 test = ["coverage", "pytest",
         "numpy", "scipy", "xarray", "torch",
-        "blosc", "pint", "quantities"]
+        "blosc", "pint", "quantities",
+        "netCDF4"]
 
 [project.urls]
 "Documentation" = "https://scityping.readthedocs.io/"
